# DKV2

./: .gitignore  BUILD.md  CMakeLists.txt  DKV2.pro  DKV2.pro.user.22  DOKU  Dockerfile  Funktionsbeschreibung.odt  README.md  activatecontractdlg.cpp  activatecontractdlg.h  activatecontractdlg.ui  dist_linux.sh  dist_linux_docker.sh  dist_win.cmd  dkdbhelper.cpp  dkdbhelper.h  dkv2.pro  filehelper.cpp  filehelper.h  itemformatter.cpp  itemformatter.h  letter.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remember.txt  template.sql3db  ui_activatecontractdlg.h  ui_mainwindow.h
.github/workflows/: build_linux.yaml  build_linux.yml  build_mac-os_qt5.yml  build_macos.yaml  build_windows.yaml  build_windows.yml  macos.yaml  release.yml
DKV2/: DKV2.pro  DKV2.rc  activatecontractdlg.ui  activatecontractwiz.cpp  activatecontractwiz.h  appconfig.cpp  appconfig.h  askDateDlg.ui  askdatedlg.cpp  askdatedlg.h  askdatedlg.ui  booking.cpp  booking.h  busycursor.h  changecontractvaluewiz.cpp  changecontractvaluewiz.h  contract.cpp  contract.h  contractsheadersortingadapter.cpp  contractsheadersortingadapter.h  contracttablemodel.cpp  contracttablemodel.h  creditor.cpp  creditor.h  csvwriter.cpp  csvwriter.h  customtoolbutton.cpp  customtoolbutton.h  dbfield.cpp  dbfield.h  dbstatistics.cpp  dbstatistics.cpp.XXX  dbstatistics.h  dbstatistics.h.XXX  dbstructure.cpp  dbstructure.h  dbtable.cpp  dbtable.h  dkdbcopy.cpp  dkdbcopy.h  (+121 more)
DKV2/printres/: Zinsbrief.css  Zinsbrief.html
DKV2/res/: IbanRegExp.txt  dkv2mail  dkv2mail.bat  endabrechnung.csv  endabrechnung.html  letter.html  zinsbrief.css  zinsbrief.html  zinsbuchungen.csv  zinsliste.html  zinsmails-linux.bat  zinsmails-win.bat  zinsmails.bat
DKV2/wix/: buildmsi.cmd
DOCS/: DKV2-draft.odt  Funktionsbeschreibung.odt  HowTo-ZinsMail.md  Jahreszins.drawio  ZinsBerechnung.xlsx  Zinsberechnungsmethode.txt  Zinstage.xlsx  remember.txt
TESTS/: TESTS.pro  financaltimespan.cpp  financaltimespan.h  resource.qrc  test_appconfig.cpp  test_appconfig.h  test_booking.cpp  test_booking.h  test_contract.cpp  test_contract.h  test_creditor.cpp  test_creditor.h  test_csv.cpp  test_csv.h  test_db.cpp  test_db.h  test_dbtable.cpp  test_dbtable.h  test_dkdbcopy.cpp  test_dkdbcopy.h  test_dkdbhelper.cpp  test_dkdbhelper.h  test_finance.cpp  test_finance.h  test_geldanlagen.cpp  test_geldanlagen.h  test_htmlbrief.cpp  test_htmlbrief.h  test_lettersnippet.cpp  test_lettersnippet.h  test_lettertemplate.cpp  test_lettertemplate.h  test_main.cpp  test_properties.cpp  test_properties.h  test_sqlhelper.cpp  test_sqlhelper.h  test_statistics.cpp  test_statistics.h  test_tabledatainserter.cpp  (+7 more)
dkv2/: DKV2.pro
docs/: DKV2-draft.odt  DKV2_Verzinsung_Buchungen_Jahresabrechnung.md  Zinsberechnungsmethode.txt  about.md  downloads.md  index.md  zinsberechnungFürDKV2 ManuelleTests-mit ExcelGerechnet.xlsx
docs/outdated/: Funktionsbeschreibung.odt  HowTo-ZinsMail.md  ZinsBerechnungLo.xlsx
htmlTest/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
installer/: product.wxs
qtcsv/: contentiterator.cpp  reader.cpp  stringdata.cpp  variantdata.cpp  writer.cpp
qtcsv/include/: abstractdata.h  qtcsv_global.h  reader.h  stringdata.h  variantdata.h  writer.h
scripts/: check_include_order.py
src/DKV2/: CMakeLists.txt  DKV2.icns  Info.plist  annualSettlement.cpp  annualSettlement.h  annual_letters.cpp  annual_letters.h  appconfig.cpp  appconfig.h  booking.cpp  booking.h  busycursor.h  contract.cpp  contract.h  contractsheadersortingadapter.cpp  contractsheadersortingadapter.h  contracttablemodel.cpp  creditor.cpp  creditor.h  csvwriter.cpp  csvwriter.h  dbfield.cpp  dbfield.h  dbstructure.cpp  dbstructure.h  dbtable.cpp  dbtable.h  dkdbcopy.cpp  dkdbcopy.h  dkdbhelper.cpp  dkdbhelper.h  dkdbindices.cpp  dkdbviews.cpp  dkdbviews.h  dkv2version.h  dlgabout.cpp  dlgabout.h  dlgannualsettlement.cpp  dlgannualsettlement.h  dlgaskcontractlabel.cpp  (+69 more)
src/DKV2/res/: DKV2.desktop  endabr-Zinsnachw.html  zinsbrief.css  zinsbrief.html  zinsbuchungen.csv  zinsliste.html  ÜbersichtJahresabschluß.sql
src/DKV2/wix/: DKV2.wxs  buildmsi.cmd  testmsi.cmd
src/Tests/: CMakeLists.txt  Tests.pro.unused  financaltimespan.cpp  test_annualsettlement.cpp  test_annualsettlement.h  test_appconfig.cpp  test_appconfig.h  test_booking.cpp  test_booking.h  test_contract.cpp  test_contract.h  test_creditor.cpp  test_creditor.h  test_csv.cpp  test_csv.h  test_db.cpp  test_db.h  test_dbfield.cpp  test_dbfield.h  test_dbtable.cpp  test_dbtable.h  test_dkdbcopy.cpp  test_dkdbcopy.h  test_dkdbhelper.cpp  test_dkdbhelper.h  test_finance.cpp  test_finance.h  test_geldanlagen.h  test_main.cpp  test_properties.cpp  test_properties.h  test_sqlhelper.cpp  test_sqlhelper.h  test_statistics.cpp  test_statistics.h  test_tabledatainserter.cpp  test_tabledatainserter.h  test_tolearn.cpp  test_tolearn.h  test_views.cpp  (+5 more)
